// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if onBeforeChange dispatches redirect, route changes with kind === "redirect" 1`] = `
Object {
  "hasSSR": undefined,
  "history": undefined,
  "kind": "redirect",
  "pathname": "/third",
  "payload": Object {},
  "prev": Object {
    "kind": "push",
    "pathname": "/second/bar",
    "payload": Object {
      "param": "bar",
    },
    "type": "SECOND",
  },
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
    "THIRD": "/third",
  },
  "type": "THIRD",
}
`;

exports[`onBeforeChange redirect on server results in 1 history entry 1`] = `
Object {
  "hasSSR": true,
  "history": undefined,
  "kind": "redirect",
  "pathname": "/third",
  "payload": Object {},
  "prev": Object {
    "kind": "push",
    "pathname": "/second/bar",
    "payload": Object {
      "param": "bar",
    },
    "type": "SECOND",
  },
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
    "THIRD": "/third",
  },
  "type": "THIRD",
}
`;
